--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -7,5 +7,5 @@
     "target": "es6"
   },
   "include": ["src"],
-  "references": [{ "path": "../utils" }]
+  "references": [{ "path": "../utils" }, { "path": "../contractkit" }]
 }
