--- a/packages/celotool/package.json
+++ b/packages/celotool/package.json
@@ -6,10 +6,10 @@
   "author": "Celo",
   "license": "Apache-2.0",
   "dependencies": {
-    "@celo/verification-pool-api": "^1.0.0",
-    "@celo/utils": "^0.1.0",
-    "@celo/walletkit": "^0.0.14",
     "@celo/contractkit": "0.1.6",
+    "@celo/utils": "^0.1.0",
+    "@celo/verification-pool-api": "^1.0.0",
+    "@celo/walletkit": "^0.0.14",
     "@google-cloud/monitoring": "0.7.1",
     "@google-cloud/pubsub": "^0.28.1",
     "@google-cloud/storage": "^2.4.3",
@@ -26,6 +26,7 @@
     "moment": "^2.22.1",
     "node-fetch": "^2.2.0",
     "prompts": "1.2.0",
+    "shelljs": "^0.8.3",
     "sleep-promise": "^8.0.1",
     "web3": "1.0.0-beta.37",
     "web3-eth-admin": "1.0.0-beta.55",
